Update SVR and summary

--- a/notebooks/10.homework-random-forest-model.ipynb
+++ b/notebooks/10.homework-random-forest-model.ipynb
@@ -10,9 +10,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#add your code"
+   ]
   }
  ],
  "metadata": {
